--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 
 
-https://educonnect-mern-stack-final-project.onrender.com/
+VITE_API_BASE_URL=https://educonnect-mern-stack-final-project.onrender.com/api
